--- a/src/View_controller/MainScreen.fxml
+++ b/src/View_controller/MainScreen.fxml
@@ -1,11 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.MainScreenController">
-    
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.MainScreenController">
+   <children>
+      <SplitPane dividerPositions="0.10744985673352435" layoutX="166.0" layoutY="87.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Button fx:id="generaterReportButton" layoutX="767.0" layoutY="12.0" mnemonicParsing="false" onAction="#generateReportHandler" prefHeight="27.0" prefWidth="125.0" text="Generarte Report" />
+                  <TextFlow layoutX="321.0" layoutY="8.0" />
+                  <Text layoutX="7.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Customers">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="352.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Appointments">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Text>
+                  <TextFlow layoutX="584.0" layoutY="18.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User Logged in : " />
+                        <Text fx:id="userText" strokeType="OUTSIDE" strokeWidth="0.0" text="User" />
+                     </children>
+                  </TextFlow>
+               </children></AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="898.0">
+               <children>
+                  <SplitPane dividerPositions="0.38392857142857145" layoutX="234.0" layoutY="36.0" prefHeight="404.0" prefWidth="898.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="36.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <TableView layoutY="-2.0" prefHeight="348.0" prefWidth="340.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
+                                <columns>
+                                  <TableColumn fx:id="custIDCol" prefWidth="42.0" text="ID" />
+                                    <TableColumn fx:id="custNameCol" prefWidth="153.0" text="Customer Name" />
+                                    <TableColumn fx:id="custPhoneCol" prefWidth="144.0" text="Phone" />
+                                </columns>
+                              </TableView>
+                              <ButtonBar layoutX="-19.0" layoutY="344.0" prefHeight="55.0" prefWidth="349.0">
+                                <buttons>
+                                  <Button fx:id="newCustomerButton" mnemonicParsing="false" onAction="#newCustomerButtonHandler" text="New Customer" />
+                                    <Button fx:id="viewCustButton" mnemonicParsing="false" onAction="#viewCustButtonHandler" text="Vew/Modify" />
+                                    <Button fx:id="deleteCustButton" mnemonicParsing="false" onAction="#deleteCustHandler" text="Delete" />
+                                </buttons>
+                              </ButtonBar>
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <TableView layoutX="-7.0" layoutY="29.0" prefHeight="346.0" prefWidth="548.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TableColumn fx:id="appointTypeCol" prefWidth="209.66665649414062" text="Appointment" />
+                                    <TableColumn fx:id="custAppointCol" prefWidth="126.33334350585938" text="Customer" />
+                                    <TableColumn fx:id="appointStartCol" prefWidth="112.8333740234375" text="Start" />
+                                    <TableColumn fx:id="AppointEndCol" prefWidth="97.1666259765625" text="End" />
+                                 </columns>
+                              </TableView>
+                              <ButtonBar layoutX="-10.0" layoutY="342.0" prefHeight="60.0" prefWidth="427.0">
+                                 <buttons>
+                                    <Button fx:id="newAppoitButton" mnemonicParsing="false" onAction="#newAppointButtonHandler" text="New Appointment" />
+                                    <Button fx:id="viewappointButton" mnemonicParsing="false" onAction="#veiwAppointButtonHandler" text="Vew/Modify" />
+                                    <Button fx:id="deleteAppointButton" mnemonicParsing="false" onAction="#deleteAppointButtonHandler" prefHeight="27.0" prefWidth="151.0" text="Delete" />
+                                 </buttons>
+                              </ButtonBar>
+                              <Button fx:id="quitButton" layoutX="499.0" layoutY="359.0" mnemonicParsing="false" onAction="#quitButtonHandler" text="Quit" />
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
+                  <TextField fx:id="SearchCustField" layoutX="2.0" layoutY="7.0" prefHeight="27.0" prefWidth="188.0" promptText="Search Customers" />
+                  <TextField fx:id="searcjAppointField" layoutX="350.0" layoutY="6.0" prefHeight="27.0" prefWidth="233.0" promptText="Search Appointmernts" />
+                  <HBox layoutX="684.0" layoutY="14.0" prefHeight="18.0" prefWidth="200.0">
+                     <children>
+                        <RadioButton fx:id="todayRadioButton" mnemonicParsing="false" onAction="#todayRadioButtonHandler" prefHeight="18.0" prefWidth="62.0" text="Today" />
+                        <RadioButton fx:id="weeklyRadioButton" mnemonicParsing="false" onAction="#weeklyRadioButtonHandler" prefHeight="18.0" prefWidth="69.0" text="Weekly" />
+                        <RadioButton fx:id="monthlyRadioButton" mnemonicParsing="false" onAction="#monthlyRadioButtonHandler" text="Monthly" />
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
 </AnchorPane>
