--- a/src/View_controller/MainScreen.fxml
+++ b/src/View_controller/MainScreen.fxml
@@ -44,7 +44,7 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <TableView layoutY="-2.0" prefHeight="348.0" prefWidth="340.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
+                              <TableView fx:id="custTableView" layoutY="-2.0" prefHeight="348.0" prefWidth="340.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
                                 <columns>
                                   <TableColumn fx:id="custIDCol" prefWidth="42.0" text="ID" />
                                     <TableColumn fx:id="custNameCol" prefWidth="153.0" text="Customer Name" />
@@ -62,12 +62,12 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <TableView layoutX="-7.0" layoutY="29.0" prefHeight="346.0" prefWidth="548.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="appointTableView" layoutX="-7.0" layoutY="29.0" prefHeight="346.0" prefWidth="548.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <columns>
                                     <TableColumn fx:id="appointTypeCol" prefWidth="209.66665649414062" text="Appointment" />
                                     <TableColumn fx:id="custAppointCol" prefWidth="126.33334350585938" text="Customer" />
                                     <TableColumn fx:id="appointStartCol" prefWidth="112.8333740234375" text="Start" />
-                                    <TableColumn fx:id="AppointEndCol" prefWidth="97.1666259765625" text="End" />
+                                    <TableColumn fx:id="appointEndCol" prefWidth="97.1666259765625" text="End" />
                                  </columns>
                               </TableView>
                               <ButtonBar layoutX="-10.0" layoutY="342.0" prefHeight="60.0" prefWidth="427.0">
