--- a/src/View_controller/ViewCustomer.fxml
+++ b/src/View_controller/ViewCustomer.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="View_controller.AddCustomerController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="View_controller.ViewCustomerController">
    <children>
-      <VBox layoutX="9.0" layoutY="65.0" prefHeight="433.0" prefWidth="383.0">
+      <VBox layoutX="9.0" layoutY="92.0" prefHeight="468.0" prefWidth="383.0">
          <children>
             <GridPane prefHeight="373.0" prefWidth="335.0">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.5" minWidth="10.0" prefWidth="114.5" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="269.0" minWidth="10.0" prefWidth="269.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -50,7 +50,7 @@
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Country" wrappingWidth="68.1484375" GridPane.rowIndex="6" />
                </children>
             </GridPane>
-            <ButtonBar prefHeight="48.0" prefWidth="383.0">
+            <ButtonBar prefHeight="95.0" prefWidth="383.0">
                <buttons>
                   <Button fx:id="addCustButton" mnemonicParsing="false" onAction="#addCustButtinHandler" prefHeight="37.0" text="Add Customer" />
                   <Button fx:id="cancelAddCustButton" mnemonicParsing="false" onAction="#cancelAddCustButtonHandler" prefHeight="38.0" prefWidth="248.0" text="Canecel" />
@@ -58,7 +58,7 @@
             </ButtonBar>
          </children>
       </VBox>
-      <Text layoutX="113.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Customer">
+      <Text layoutX="85.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View / Modify Customer">
          <font>
             <Font size="24.0" />
          </font>
