--- a/src/View_controller/ViewCustomer.fxml
+++ b/src/View_controller/ViewCustomer.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="View_controller.ViewCustomerController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.ViewCustomerController">
    <children>
       <VBox layoutX="9.0" layoutY="92.0" prefHeight="468.0" prefWidth="383.0">
          <children>
@@ -38,7 +37,7 @@
                   <TextField fx:id="custCityField" prefHeight="27.0" prefWidth="221.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <TextField fx:id="custCountryField" prefHeight="27.0" prefWidth="221.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <TextField fx:id="custPostCodeField" prefHeight="27.0" prefWidth="221.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <TextField editable="false" prefHeight="27.0" prefWidth="221.0" text="Auto Generated" GridPane.columnIndex="1" />
+                  <TextField fx:id="custIDFiled" editable="false" prefHeight="27.0" prefWidth="221.0" GridPane.columnIndex="1" />
                   <TextField fx:id="custNameField" prefHeight="27.0" prefWidth="221.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Customer ID" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" GridPane.rowIndex="1" />
@@ -52,7 +51,7 @@
             </GridPane>
             <ButtonBar prefHeight="95.0" prefWidth="383.0">
                <buttons>
-                  <Button fx:id="addCustButton" mnemonicParsing="false" onAction="#addCustButtinHandler" prefHeight="37.0" text="Add Customer" />
+                  <Button fx:id="addCustButton" mnemonicParsing="false" onAction="#addCustButtinHandler" prefHeight="37.0" text="Modify Customer" />
                   <Button fx:id="cancelAddCustButton" mnemonicParsing="false" onAction="#cancelAddCustButtonHandler" prefHeight="38.0" prefWidth="248.0" text="Canecel" />
                </buttons>
             </ButtonBar>
