--- a/src/View_controller/MainScreen.fxml
+++ b/src/View_controller/MainScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.RadioButton?>
@@ -84,11 +85,16 @@
                   </SplitPane>
                   <TextField fx:id="SearchCustField" layoutX="2.0" layoutY="7.0" prefHeight="27.0" prefWidth="188.0" promptText="Search Customers" />
                   <TextField fx:id="searcjAppointField" layoutX="350.0" layoutY="6.0" prefHeight="27.0" prefWidth="233.0" promptText="Search Appointmernts" />
-                  <HBox layoutX="684.0" layoutY="14.0" prefHeight="18.0" prefWidth="200.0">
+                  <HBox layoutX="594.0" layoutY="12.0" prefHeight="18.0" prefWidth="290.0">
                      <children>
-                        <RadioButton fx:id="todayRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="62.0" text="Today" />
-                        <RadioButton fx:id="weeklyRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="69.0" text="Weekly" />
-                        <RadioButton fx:id="monthlyRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" text="Monthly" />
+                        <RadioButton fx:id="allRadioButton1" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="56.0" text="All">
+                           <opaqueInsets>
+                              <Insets left="5.0" />
+                           </opaqueInsets>
+                        </RadioButton>
+                        <RadioButton fx:id="todayRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="68.0" text="Today" />
+                        <RadioButton fx:id="weeklyRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="78.0" text="Weekly" />
+                        <RadioButton fx:id="monthlyRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="78.0" text="Monthly" />
                      </children>
                   </HBox>
                </children>
