--- a/src/View_controller/Login.fxml
+++ b/src/View_controller/Login.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" fx:id="userName" prefHeight="397.0" prefWidth="324.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.LoginController">
     <stylesheets>
@@ -15,5 +17,10 @@
       <PasswordField fx:id="passwordField" layoutX="82.0" layoutY="241.0" promptText="Password" />
       <Button fx:id="loginButton" layoutX="172.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginButtonHandler" text="Login" />
       <Button fx:id="quitButton" layoutX="234.0" layoutY="342.0" mnemonicParsing="false" onAction="#quitButtonHandler" text="Quit" />
+      <Text fx:id="welcomeText" layoutX="37.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome! Please Log in!" wrappingWidth="270.18017578125">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
