--- a/src/View_controller/UserLogin.fxml
+++ b/src/View_controller/UserLogin.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="View_controller.UserLoginController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.UserLoginController">
    <children>
      
       <ButtonBar layoutX="30.0" layoutY="326.0" prefHeight="40.0" prefWidth="239.0">
