--- a/src/View_controller/MainScreen.fxml
+++ b/src/View_controller/MainScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.RadioButton?>
@@ -33,7 +34,7 @@
                   </Text>
                   <TextFlow layoutX="584.0" layoutY="18.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User Logged in : " />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Consultant Logged in : " />
                         <Text fx:id="userText" strokeType="OUTSIDE" strokeWidth="0.0" text="User" />
                      </children>
                   </TextFlow>
@@ -64,16 +65,16 @@
                            <children>
                               <TableView fx:id="appointTableView" layoutX="-7.0" layoutY="29.0" prefHeight="346.0" prefWidth="548.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <columns>
-                                    <TableColumn fx:id="appointTypeCol" prefWidth="209.66665649414062" text="Appointment" />
-                                    <TableColumn fx:id="custAppointCol" prefWidth="126.33334350585938" text="Customer" />
-                                    <TableColumn fx:id="appointStartCol" prefWidth="112.8333740234375" text="Start" />
-                                    <TableColumn fx:id="appointEndCol" prefWidth="97.1666259765625" text="End" />
+                                    <TableColumn fx:id="appointTypeCol" prefWidth="175.0" text="Appointment" />
+                                    <TableColumn fx:id="custAppointCol" prefWidth="134.5" text="Customer" />
+                                    <TableColumn fx:id="appointStartCol" prefWidth="122.0" text="Start" />
+                                    <TableColumn fx:id="appointEndCol" prefWidth="115.5" text="End" />
                                  </columns>
                               </TableView>
                               <ButtonBar layoutX="-10.0" layoutY="342.0" prefHeight="60.0" prefWidth="427.0">
                                  <buttons>
                                     <Button fx:id="newAppoitButton" mnemonicParsing="false" onAction="#newAppointButtonHandler" text="New Appointment" />
-                                    <Button fx:id="viewappointButton" mnemonicParsing="false" onAction="#veiwAppointButtonHandler" text="Vew/Modify" />
+                                    <Button fx:id="viewappointButton" mnemonicParsing="false" onAction="#veiwAppointButtonHandler" text="Modify" />
                                     <Button fx:id="deleteAppointButton" mnemonicParsing="false" onAction="#deleteAppointButtonHandler" prefHeight="27.0" prefWidth="151.0" text="Delete" />
                                  </buttons>
                               </ButtonBar>
@@ -84,11 +85,15 @@
                   </SplitPane>
                   <TextField fx:id="SearchCustField" layoutX="2.0" layoutY="7.0" prefHeight="27.0" prefWidth="188.0" promptText="Search Customers" />
                   <TextField fx:id="searcjAppointField" layoutX="350.0" layoutY="6.0" prefHeight="27.0" prefWidth="233.0" promptText="Search Appointmernts" />
-                  <HBox layoutX="684.0" layoutY="14.0" prefHeight="18.0" prefWidth="200.0">
+                  <HBox layoutX="594.0" layoutY="12.0" prefHeight="18.0" prefWidth="290.0">
                      <children>
-                        <RadioButton fx:id="todayRadioButton" mnemonicParsing="false" onAction="#todayRadioButtonHandler" prefHeight="18.0" prefWidth="62.0" text="Today" />
-                        <RadioButton fx:id="weeklyRadioButton" mnemonicParsing="false" onAction="#weeklyRadioButtonHandler" prefHeight="18.0" prefWidth="69.0" text="Weekly" />
-                        <RadioButton fx:id="monthlyRadioButton" mnemonicParsing="false" onAction="#monthlyRadioButtonHandler" text="Monthly" />
+                        <RadioButton fx:id="allRadioButton1" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="56.0" text="All">
+                           <opaqueInsets>
+                              <Insets left="5.0" />
+                           </opaqueInsets>
+                        </RadioButton>
+                        <RadioButton fx:id="weeklyRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="78.0" text="Weekly" />
+                        <RadioButton fx:id="monthlyRadioButton" mnemonicParsing="false" onAction="#radioButtonHandler" prefHeight="18.0" prefWidth="78.0" text="Monthly" />
                      </children>
                   </HBox>
                </children>
